memoize getting ip addresses, lower logging of clj-ssh, use aphyr's jvm opts